2006-02-08  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/data/.cvsignore, editor/gtk/.cvsignore: Ignore icons
	
2006-02-07  0.9.54 Roland Clobus <rclobus@bigfoot.com>
	* pioneers.nsi.in: Added Swedish translation to installer.
	* client/gtk/connect.c, client/gtk/gui.c, editor/gtk/editor.c,
	server/server.c, server/gtk/main.c: Initialize GError * to NULL
	* meta-server/main.c: Fixes crashes in the metaserver that did allow
	the creation of new servers even when the metaserver does not support
	it.
	* common/gtk/guimap.c (calc_edge_poly): Apply gravity to ships and
	bridges.

2006-02-04  0.9.53 Roland Clobus <rclobus@bigfoot.com>
	* server/main.c, server/player.c, server/server.c, server/server.h,
	server/turn.c, server/gtk/main.c: Fixed memory leaks, at game over the
	GTK server will enable its interface when all players have left.
	* server/trade.c: Fixed a memory leak (based on a patch by Bas Wijnen
	<shevek@fmf.nl>)
	* common/gtk/guimap.c (guimap_cursor_move): Implemented single click 
	build for ship/bridge situations
	* README.Cygwin, configure.ac, client/gtk/data/Makefile.am,
	editor/gtk/Makefile.am: The icons for Microsoft Windows executables 
	are generated using netpbm.
	* client/gtk/data/pioneers.ico, editor/gtk/pioneers-editor.ico:
	Removed, they are now generated from the corresponding SVG files.

2006-02-02  0.9.52 Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/callbacks.c (frontend_new_bank): Removed compiler warning.
	* autogen.sh: Require automake1.7 as minimum version.

2006-01-27  0.9.51 Stefan Walter <sw@gegenunendlich.de>
	* client/gtk/settingscreen.c: Patch for gcc-2.95

2006-01-26  0.9.50 Brian Wellington <bwelling@xbill.org>
	* pioneers.spec.in: Added Swedish translation

2006-01-25  0.9.49 Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/frontend.c, common/gtk/gtkbugs.c, common/gtk/gtkbugs.h:
	For Gtk+-2.6, don't disconnect the shortcut keys when the action is set
	to insensitive.
	* pioneers.nsi.in: Added Wesnoth-like theme